# fastapi-board

./: .gitignore  README.md  pyproject.toml  settings.toml
app/: config.py  main.py
app/api/: main.py
app/api/routes/: auth.py  user.py
app/core/: database.py  exception.py  security.py
app/crud/: auth.py  comment_crud.py  like_crud.py  post_crud.py  user.py  user_crud.py  user_data.csv
app/model/: models.py  user.py
app/repository/: base_comment_repository.py  base_file_repository.py  base_like_repository.py  base_post_repository.py  base_user_repository.py
app/repository/csv/: csv_comment_repository.py  csv_file_repository.py  csv_like_repository.py  csv_post_repository.py  csv_user_repository.py
app/repository/db/: db_comment_repository.py  db_file_repository.py  db_like_repository.py  db_post_repository.py  db_user_repository.py
app/routes/: auth_router.py  comment_router.py  file_router.py  post_router.py  user_router.py
app/schema/: auth.py  auth_schema.py  comment_schema.py  common.py  common_schema.py  file_schema.py  post_schema.py  user.py  user_schema.py
app/service/: auth_service.py  comment_service.py  file_service.py  post_service.py  user_service.py
temp_table/: comment_data.csv  like_data.csv  post_data.csv  user_data.csv
tests/: db_connect.py  model_connect.py
